--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,98 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  text-decoration: none;
+  padding: 100px 10%;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "roboto";
+}
+
+.cart {
+  display: flex;
+  border: 2px solid #c9baba;
+  gap: 1rem;
+  width: 450px;
+  border-radius: 10px;
+  padding: 20px;
+  flex-direction: column;
+}
+
+.list {
+  border: 2px solid #c9baba;
+  border-radius: 10px;
+  padding: 20px;
+  display: flex;
+  width: 450px;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.list .list_h2,
+.cart .cart_h2 {
+  text-align: center;
+  color: rgb(9, 134, 207);
+}
+
+.product_list_li {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+}
+
+.product_list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.list_btn {
+  padding: 8px;
+  background-color: rgb(230, 66, 25);
+  color: #fff;
+  border-radius: 10px;
+  border: 4px solid #faab00;
+}
+
+.list_btn:hover {
+  cursor: pointer;
+  background-color: rgb(17, 17, 216);
+}
+
+.cart_items {
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+}
+
+.cart_total {
+  text-align: center;
+  font-size: 25px;
+}
+
+.cart_title {
+  font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+  .list {
+    width: 100%;
+  }
+
+  body {
+    padding: 10px 6%;
+  }
+
+  .cart {
+    width: 100%;
+  }
 }
